--- a/MegamanVega Academy.css
+++ b/MegamanVega Academy.css
@@ -51,7 +51,8 @@ ul {
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
-    padding: 100px;
+    padding: 180px;
+
 }
 .principal img{
     width: 200px;
@@ -74,24 +75,6 @@ ul {
 .principal h1{
     padding: 0px;
 }
-.Somos {
-    background-color: rgba(46, 161, 94, 0.308);
-    text-align: left;
-    padding: 50px;
-    background-color: rgb(51, 57, 63);;
-    font-size: 20px;
-}
-
-.Somos p{
-    margin-bottom: 20px;
-}
-.Somos h2{
-    font-family: 'Play', sans-serif;
-    font-size: 40px;
-    color: cyan;
-    margin-bottom: 10px;
-}
-
 .como-usar{
     height: 500px;
     background-color: rgb(46, 51, 54);
@@ -151,26 +134,47 @@ nav li a:hover{
 .principal-boton:hover{
     background-color: #434343;
 }
-.publicación-1 p{
-    padding: 0px 20px;
-}
-.publicación-1 h2{
-    padding: 0px 30px;
-}
-.publicación-1 strong{
-    text-align: right;
-    color: white;
-    font-size: 50px;
-    padding: 0px 0px 0px 100px;
-}
-.Somos h1{
-    font-family: 'Nunito', sans-serif;
-    font-size: 50px;
-    text-align: center;
-    padding: 0px 0px 50px 0px;
-    color: gold;
-}
 .principal-boton{
     text-align:center;
 }
-
+/* Registro*/
+.Registro{
+    width: 100%;
+    height: 315px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #7284DF;
+}
+.registro_container{
+    display: flex;
+    width: 50%;
+    height: 100%;
+    flex-direction: column;
+}
+.registro_hijo1{
+    height: 60px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+}
+.registro_hijo1 button{
+    width: 250px;
+    height: 40px;
+    background-color:#D98F82;
+    border-radius: 24px;
+    border: none ;
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 0px;
+    color: black;
+    margin: 50px;
+}
+.registro_hijo1 h2{
+    font-family: 'Play', sans-serif;
+}
+.registro_hijo2 p{
+    text-align:justify;
+    margin-bottom: 20px;
+}
