--- a/MegamanVega Academy.css
+++ b/MegamanVega Academy.css
@@ -140,7 +140,7 @@ nav li a:hover{
 /* Registro*/
 .Registro{
     width: 100%;
-    height: 315px;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -171,10 +171,20 @@ nav li a:hover{
     color: black;
     margin: 50px;
 }
+.registro_hijo2{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
 .registro_hijo1 h2{
     font-family: 'Play', sans-serif;
 }
 .registro_hijo2 p{
-    text-align:justify;
+    text-align:center;
     margin-bottom: 20px;
+}
+.registro_hijo2 img{
+    width: 260px;
+    margin: 0px;
+    padding: 0px;
 }
